# kctl

./: .gitignore  AGENTS.md  README.md  kctl_scope.md  pyproject.toml
.github/workflows/: ci.yml
kctl/: cli.py  db.py  extract.py  publish.py  review.py
tests/: conftest.py  test_extract.py  test_preflight.py  test_publish_render_status.py  test_review.py
